<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/bill"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="5"
        android:background="#00000000"
        android:hint="@string/enter_bill"
        android:id="@+id/editText"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="36dp"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tip_percentage"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="41dp"
        android:layout_toStartOf="@+id/editText"
        android:layout_alignEnd="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:background="#00000000"
        android:ems="5"
        android:hint="@string/enter_bill"
        android:id="@+id/editText2"
        android:layout_alignStart="@+id/editText"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignTop="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/split"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp"
        android:layout_alignEnd="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="5"
        android:hint="@string/enter_bill"
        android:background="#00000000"
        android:id="@+id/editText3"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignStart="@+id/editText2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/evaluate"
        android:id="@+id/button"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="evaluate"/>

</RelativeLayout>
